shared.css: fix experience bar spacing
By no longer trimming whitespace, we may have introduced unintended
spaces into some space-sensitive composite elements. The only thing
I've noticed so far is the experience bar, but we can fix this by
setting the font-size of the container to zero.

--- a/src/htdocs/css/shared.css
+++ b/src/htdocs/css/shared.css
@@ -623,3 +623,8 @@ table#moveTable td {
 .port9 {
 	background-color: #FF8080;
 }
+
+/* Right panel experience bar */
+#lvlBar {
+	font-size: 0;
+}
